fix: restore dark mode text colors

--- a/assets/stylesheets/reashal-base.css
+++ b/assets/stylesheets/reashal-base.css
@@ -88,6 +88,10 @@ main {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
+.dark .article-container {
+    box-shadow: rgba(142, 208, 220, .4) 0px 0px 8px;
+}
+
 /* === 侧边栏动画控制 === */
 
 /* 侧边栏初始状态：隐藏在左侧 */
