--- a/assets/stylesheets/reashal-moments.css
+++ b/assets/stylesheets/reashal-moments.css
@@ -97,7 +97,7 @@
     white-space: pre-wrap;
 }
 
-.dark .moment-content p {
+.dark .moment-content {
     color: #c8c8c8;
 }
 
